# spl_net_client

./: CMakeLists.txt  makefile
include/: clientToServer.h  serverToClient.h
src/: clientToServer.cpp  connectionHandler.cpp  echoClient.cpp  serverToClient.cpp
